fix : center dropdown navbar menu on mobile screen

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -194,7 +194,7 @@
     height: 100vh;
     width: 100vw;
     top: 50;
-    left: 0;
+    right: 0;
     background: #202020;
     transition: all 0.5s ease-in-out;
     margin-top: 10px;
